<resources>
    <string name="app_name">Aho-Corasick</string>

    <string name="insert_text_hint">Enter Keyword</string>
    <string name="matching">Matching</string>
    <string name="matching_text_hint">Enter Search Text</string>
    <string name="matching_text">Matching Text</string>
    <string name="keyword_list">Keyword List</string>
    <string name="result">Result</string>
    <string name="config">Config</string>

    <string name="config_case_insensitive">case_insensitive</string>
    <string name="config_remove_overlaps">remove_overlaps</string>
    <string name="config_only_whole_words">only_whole_words</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>

</resources>
